# Productive-Skill

./: .gitignore  .mcp.json  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: create-task.md  find.md  log-time.md  project-status.md  search.md  setup.md  weekly-report.md
docs/: install.md  troubleshooting.md
docs/decisions/: 0001-build-vs-fork-mcp-server.md
docs/plans/: 2026-04-27-001-feat-productive-claude-code-plugin-plan.md
mcp_server/: README.md  pyproject.toml
mcp_server/productive_mcp/: __init__.py  __main__.py  client.py  formatting.py  server.py
mcp_server/productive_mcp/tools/: __init__.py  _helpers.py  _registry.py  companies.py  deals.py  health.py  people.py  services.py  tasks.py  time_entries.py
mcp_server/tests/: conftest.py  test_client.py  test_tools_deals.py  test_tools_tasks.py  test_tools_time_entries.py
skills/productive/project-status/: SKILL.md
skills/productive/project-status/reference/: status-report-format.md
skills/productive/time-tracking/: SKILL.md
skills/productive/time-tracking/examples/: fill-gaps.md  log-yesterday.md
